syntax = "proto3";

option csharp_namespace = "ChatService";

import "google/protobuf/Empty.proto";

package chat;

service MessengerService{
	rpc GetUser(GetUserRequest) returns (google.protobuf.Empty);
	rpc SendUserList(google.protobuf.Empty) returns (SendUserListResponse);

	rpc SendMessage(SendRequest) returns (SendResponse);
	rpc GetMessages(GetMessagesRequest) returns (stream GetMessagesResponse);
}

message GetUserRequest{
	User user = 1;
}

message SendRequest{
	string from=1;
	string text=2;
}

message SendResponse{

}

message GetMessagesRequest{

}

message GetMessagesResponse{
	string from=1;
	string text=2;
}

message User{
	int32 id = 1;
	string name = 2;
}

message Message{
	string text = 1;
	User user = 2;
}